CHANGELOG RoundCube Webmail
---------------------------

2008/08/27 (alec)
----------
- Added options to use syslog instead of log file (#1484850)
- Added Logging & Debugging section in Installer
- Write to smtp log also sent MDN confirmations

2008/08/26 (alec)
----------
- Removed support for PEAR::DB driver

2008/08/21 (alec)
----------
- Add Content-Length header while attachments downloading (#1484256)
- Fix In-Reply-To and References headers when composing saved draft 
  message (#1485288)
- Removed PHP4 class constructors
- Fix html message charset conversion for charsets with underline (#1485287) 
- Fix buttons status after contacts deletion (#1485233)

2008/08/21 (estadtherr)
----------
- Fix escaping of To: and From: fields when building message body for reply
  or forward in the HTML editor (#1484904)

2008/08/15 (thomasb)
----------
- Use current mailbox name in template (#1485256)
- Better fix for skipping untagged responses (#1485261)
- Added pspell support patch by Kris Steinhoff (#1483960)
- Enable spellchecker for HTML editor (#1485114)
- Respect spellcheck_uri in tinyMCE spellchecker (#1484196)

2008/08/09 (alec)
----------
- Case insensitive contacts searching using PostgreSQL (#1485259)

2008/07/31 (thomasb)
----------
- Make default imap folders configurable for each user (#1485075)
- Save outgoing mail to selectable folder (#1324581)
- Fix hiding of mark menu when clicking th button again (#1484944)

2008/07/21 (alec)
----------
- use long date format in print mode (#1485191)

2008/07/18 (alec)
----------
- Updated TinyMCE to version 3.1.0.1

2008/07/14 (thomasb)
----------
- Re-enable autocomplete attribute for login form (#1485211)
- Check PERMANENTFLAGS before saving $MDNSent flag (#1484963, #1485163)

2008/06/30 (alec)
----------
- Added flag column on messages list (#1484623)

2008/06/24 (alec)
----------
- Patched Mail/MimePart.php (http://pear.php.net/bugs/bug.php?id=14232)

2008/06/24 (alec)
----------